@@ -1,7 +1,7 @@
 #!perl
 #===============================================================================
 #
-# t/07_pod.t
+# t/08_pod.t
 #
 # DESCRIPTION
 #   Test script to check POD.
