@@ -2,6 +2,8 @@ Revision history for Perl distribution Filter-Crypto
 
 2.07 Development
 
+    - Added optional Changes testing (skipped unless AUTHOR_TESTING).
+
     - Reformatted Changes file as per CPAN::Changes::Spec.
 
     - Made Perl Critic, Pod and Pod Coverage tests skip unless AUTHOR_TESTING.
